--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "12.1.10",
     "axios": "0.21.1",
     "history": "5.0.0",
+    "jsdoc": "3.6.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
